# chapa-chapa-wizard

./: Cargo.toml
assets/: messages.motd.json
assets/levels/: ccwp.tiled-session  ccwp.tset  level1.ccwl.json  level1.tmx
assets/sprites/Factions/Knights/Troops/Archer/Blue/: Archer_Blue.animations.json
assets/sprites/Factions/Knights/Troops/Archer/Red/: Archer_Red.animations.json
src/: animation.rs  main.rs  motd.rs  player.rs
src/entities/: archer.rs  mod.rs  o.json
src/helpers/: coordinate_utils.rs  mod.rs  tiled.rs
src/levels/: coordinator.rs  level1.rs  mod.rs
tests/level/: example.ccwl.json
