[package]
name = "chapa-chapa-wizard"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.11" }
bevy_asset_loader = "0.17"
bevy_asset_loader_derive = "0.17"
bevy_ecs_tilemap = { version = "0.11", features = ["atlas"] }
bevy_common_assets = { version = "0.7", features = ["json"] }
serde = "1.0"
rand = "0.8.5"
tiled = "0.11.2"
anyhow = "1.0"
dashmap = { version = "5.5", features = ["serde"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
